# pyrser-fun

./: .gitignore  pyproject.toml  pyrser.py  readme.md  test_all.py
examples/: clock.py
