[tool.poetry]
name = "pyrser"
version = "0.1.0"
description = "Python Parser Fun"
authors = ["João Paulo Taylor Ienczak Zanette <jpaulotiz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.761"
pytest = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
